--- a/ui/views/form.pug
+++ b/ui/views/form.pug
@@ -38,6 +38,6 @@ html(lang="en")
               span(class="input-group-btn")
                 button(class="browse btn btn-primary input-lg", type="button")
                   i(class="glyphicon glyphicon-search")
-                  Browse
+                  | &nbsp;&nbsp;Browse
             small(id="fileHelp", class="form-text text-muted") Choose a valid PDF file from your filesystem. Any other option might result in an instability of the service.
           button(type="submit", class="btn btn-primary") Submit
