Added quality and density.

--- a/ui/views/error.pug
+++ b/ui/views/error.pug
@@ -12,6 +12,6 @@ html(lang="en")
           h1 PDF to JPEGs ERROR
 
         div(class="page-header")
-          h1 Ups, an error occurred :(
+          h1 Ups, an error occurred :( #{message}
         p
           a(href="/", class="btn btn-info", role="button") Convert another PDF
